--- a/CameraRollAccess/Base.lproj/Main.storyboard
+++ b/CameraRollAccess/Base.lproj/Main.storyboard
@@ -16,28 +16,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oEy-Yg-MzM">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oEy-Yg-MzM">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mFV-MO-NgU">
-                                <rect key="frame" x="146" y="319" width="83" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mFV-MO-NgU">
+                                <rect key="frame" x="146" y="625" width="83" height="30"/>
                                 <color key="backgroundColor" red="0.85882352939999995" green="0.89019607840000003" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Camera Roll"/>
                                 <connections>
                                     <action selector="pressCameraRoll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3jd-mu-gud"/>
                                 </connections>
                             </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qsF-7g-k4L">
+                                <rect key="frame" x="34" y="585" width="307" height="29"/>
+                                <segments>
+                                    <segment title="Off"/>
+                                    <segment title="Light"/>
+                                    <segment title="ExtraLight"/>
+                                    <segment title="Dark"/>
+                                </segments>
+                                <connections>
+                                    <action selector="pressEffectSegControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="rpu-cg-CGI"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="oEy-Yg-MzM" secondAttribute="bottom" id="1GK-u3-spT"/>
+                            <constraint firstAttribute="trailing" secondItem="oEy-Yg-MzM" secondAttribute="trailing" id="1cZ-fp-Lca"/>
+                            <constraint firstItem="oEy-Yg-MzM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6Tb-F9-9jZ"/>
+                            <constraint firstItem="mFV-MO-NgU" firstAttribute="top" secondItem="qsF-7g-k4L" secondAttribute="bottom" constant="12" id="DJR-gd-DYF"/>
+                            <constraint firstItem="mFV-MO-NgU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ac1-eY-J4q"/>
+                            <constraint firstItem="oEy-Yg-MzM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cqi-73-g44"/>
+                            <constraint firstItem="qsF-7g-k4L" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gZJ-4Q-Py7"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mFV-MO-NgU" secondAttribute="bottom" constant="12" id="pPK-Hr-xf5"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="effectSegControl" destination="qsF-7g-k4L" id="QUS-7Y-jy2"/>
                         <outlet property="imageFromCameraRoll" destination="oEy-Yg-MzM" id="wO5-HJ-Tub"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="452.5" y="223.5"/>
+            <point key="canvasLocation" x="475.5" y="245.5"/>
         </scene>
     </scenes>
 </document>
